// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates non-standard components 1`] = `
<sup
  className="css-tq928n"
>
  hey
</sup>
`;

exports[`renders 1`] = `
<h1
  className="css-0"
>
  Hello
</h1>
`;

exports[`renders with styles 1`] = `
<h1
  className="css-tq928n"
>
  Hello
</h1>
`;
